2011-11-24  Jim Fowler  <jrf@Biblion>

	* WebPages/Auctions.txt: Added Auction House web pages.

2011-11-19  Jim Fowler  <jrf@Biblion>

	* Data/Ajb: added ajb63_books.[docx&txt] and
	ajb62_books.[docx&txt].  Modified contents.c to replace TAB with
	CommaSpace. Created ./testing/.gitignore.

2011-11-13  Jim Fowler  <jrf@Biblion>

	* Data/Testing/contents.c: Wrote contents.c to remove HTML
	tags fomr AJB table of contents files

	* Data/Ajb/ajb63_books.docx: finally proof read AJB 63 books.
	Transfered the file from girginaku to biblion.
	
2011-10-20  Jim Fowler  <jrf@Biblion>

	* Git: converted version control from svn to git. 'Master'
	repository will be in biblion:/home/git/books with distributed
	versions on biblion:/home/jrf and on my Mac Book. Just need to
	remember to push/pull frequently.

2011-08-02  Jim Fowler  <jrf@Biblion>

	* WebPages/BooksOnLine.txt: Added www.worldlibrary.net,
	www.worldebookfair.com, and www.archive.org to On Line Books page.

2011-03-27  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: Added Fine Books & Collections Blog to
	the Blog list. Haven't done much work on the project in quite a
	while.

2010-12-29  Jim Fowler  <jrf@Biblion>

	* Upgraded to Ubuntu 10.10.  No serious problems with the project.
	
2010-10-31  Jim Fowler  <jrf@Biblion>

	* Commit files to svn.  It has been 18 months since the last
	commit.  Need to do this every night that I make changes

2010-05-21  Jim Fowler  <jrf@Biblion>

	* WebPages/Makefile: Changed the location for the public pages
	from ~/public_html to /var/www/jrf.  With Php5.3/Apache2 user
	directories are no longer allowed to have php scripts. This is
	a security feature in Php5.3.

2010-05-18  Jim Fowler  <jrf@Biblion>

	* Upgraded to Ubuntu 10.04.  Apache does not seem to be executing
	my php scripts.
	
2010-01-17  Jim Fowler  <jrf@Biblion>

	* Svn: Checked all changes into the subversion archive.
	
2010-01-03  Jim Fowler  <jrf@Biblion>
