@@ -1,6 +1,6 @@
 <h3>The Book</h3>
 <a href="http://127.0.0.1:8080/roller/Books20">My Blog</a>
-<br><a href="ToDoList">To Do List</a>
+<br><a href="ToDoList.php">To Do List</a>
 <br><a href="./DatabaseDesign.pdf">Books20 Project Design (pdf)</a>
 <br>The Books20 Database
 <br><a href="./books20.pdf">The Manuscript (pdf)</a> 
